--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Container styles */
+.container {
+  width: 90%;
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Heading styles */
+.heading-div {
+  text-align: center;
+  font-size: 2.5em;
+  margin-top: 20px;
+  color: #333;
+}
+
+/* Button styles */
+.menu-tab {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.btn {
+  background-color: #ff5722;
+  color: white;
+  padding: 10px 20px;
+  margin: 0 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #e64a19;
+}
+
+/* Menu items container */
+.menu-item-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 150px;
+  justify-content: flex-start; /* Changed to flex-start for continuous sequence */
+}
+
+/* Individual menu item */
+.menu-item {
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  flex-basis: calc(25% - 15px);
+  margin-bottom: 15px;
+}
+
+/* Menu item image */
+.menu-img {
+  width: 100%;
+  text-align: center;
+}
+
+.menu-img img {
+  width: 100%;
+  height: auto;
+  border-bottom: 2px solid #ddd;
+}
+
+/* Menu item description */
+.menuitem-description {
+  padding: 10px;
+}
+
+.main-title h1 {
+  font-size: 1.2em;
+  margin: 0;
+  color: #333;
+}
+
+.main-title p {
+  color: #777;
+  margin: 5px 0;
+}
+
+.menuitem-price h2 {
+  color: #ff5722;
+  font-size: 1.2em;
+  margin: 5px 0;
+}
+
+.order-btn {
+  background-color: #ff5722;
+  color: white;
+  padding: 8px 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 0.9em;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
+
+.order-btn:hover {
+  background-color: #e64a19;
+}
+
+.menuitem-price p {
+  color: #777;
+  font-size: 0.8em;
 }
